# markdown-rs-to-markdown

./: .gitignore  Cargo.toml  README.md
src/: join.rs  lib.rs  unsafe.rs
src/gfm/: autolink_literal.rs  footnote.rs  gfm_strikethrough.rs  gfm_task_list_item.rs  markdown_table.rs  mod.rs  strikethrough.rs  table.rs
src/handle/: blockquote.rs  break.rs  code.rs  definition.rs  emphasis.rs  heading.rs  html.rs  image.rs  image_reference.rs  inline_code.rs  link.rs  link_reference.rs  list.rs  list_item.rs  mod.rs  paragraph.rs  root.rs  strong.rs  text.rs  thematic_break.rs  yaml.rs
src/types/: construct.rs  extension.rs  mod.rs  node.rs  options.rs  state.rs  track.rs
src/utils/: association.rs  compile_pattern.rs  container_flow.rs  container_phrasing.rs  decode_string.rs  format_code_as_indented.rs  format_heading_as_setext.rs  format_link_as_autolink.rs  indent_lines.rs  mod.rs  pattern_in_scope.rs  safe.rs  visit.rs
tests/: EXPECTED.md  OUTPUT.md  to_markdown.rs
