[package]
name = "markdown-rs-to-markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
tap = "1.0.1"
derive_more = { version = "0.99.0", features = ["display"] }
markdown = "1.0.0-alpha.10"
maplit = "1.0.2"
regex-macro = "0.2.0"
once_cell = "1.18.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 4
panic = "abort"
